syntax = "proto3";

package bonder.calculation.grpc;

import "google/protobuf/timestamp.proto";
import "Models/Decimal/Decimal.proto";
import "Models/Guid/GrpcGuid.proto";
import "google/protobuf/empty.proto";

service CalculationService {
	rpc GetBondsByTickers(GetBondsByTickersRequest) returns (BondsResponse);
	rpc GetCurrentBonds(Filters) returns (GetCurrentBondsResponse);
}

message GetBondsByTickersRequest {
	repeated string tickers = 1;
}

message GetCurrentBondsResponse {
	repeated GetCurrentBondsItem Bonds = 1;
}

message BondsResponse {
	repeated GrpcBond Bonds = 1;
}

message GrpcBond {
	bonder.protos.custom.GrpcGuid id = 1;
	string ticker = 2;
	string isin = 3;
	string name = 4;
    bonder.protos.custom.Decimal price = 5;
	bonder.protos.custom.Decimal nominal = 6;
	int32 rating = 7;
	google.protobuf.Timestamp maturity_date = 8;
	google.protobuf.Timestamp offer_date = 9;
}

message GetCurrentBondsItem {
	GrpcBond item = 1;
	bonder.protos.custom.Decimal income = 2;
	bonder.protos.custom.Decimal coupon_income = 3;
	bonder.protos.custom.Decimal amortization_income = 4;
	bonder.protos.custom.Decimal price_percent = 5;
}

message Filters {
	bonder.protos.custom.Decimal price_from = 1;
    bonder.protos.custom.Decimal price_to = 2;
    int32 rating_from = 3;
    int32 rating_to = 4;
	google.protobuf.Timestamp date_from = 5;
	google.protobuf.Timestamp date_to = 6;
	bool include_unknown_ratings = 7; 
	GrpcDateIntervalType DateIntervalType = 8;
}

enum GrpcDateIntervalType {
  MATURITY = 0;
  OFFER = 1;
  CUSTOM = 2;
}
